force-app/main/default/objects/SS_Manage_SurveySparrow_Integration__c/SS_Manage_SurveySparrow_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Manage SurveySparrow Integration</label>
</CustomObject>