force-app/main/default/objects/SS_Manage_SurveySparrow_Integration__c/fields/Is_surveysparrow_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_surveysparrow_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is surveysparrow.com Active?</label>
    <type>Checkbox</type>
</CustomField>