force-app/main/default/objects/SS_Manage_SurveySparrow_Integration__c/fields/Is_thrivesparrow_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_thrivesparrow_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is thrivesparrow.com Active?</label>
    <type>Checkbox</type>
</CustomField>