force-app/main/default/objects/SS_Manage_SurveySparrow_Integration__c/fields/SS_Enable_SurveySparrow_Integration__c.field-meta.xml
<CustomField>
    <fullName>SS_Enable_SurveySparrow_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable SurveySparrow Integration</label>
    <type>Checkbox</type>
</CustomField>