force-app/main/default/objects/SS_Manage_SurveySparrow_Integration__c/fields/SS_Webhook_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>SS_Webhook_Site_URL__c</fullName>
    <label>Webhook Site URL</label>
    <type>TextArea</type>
</CustomField>